style(cart/mobile): remove duplicate checkout bar & fix viewport height bug on mobile Chrome

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 html {
     scrollbar-gutter: stable;
     background-color: #fbf7f0;
-    height: 100%;
+    min-height: 100%;
     transition: background-color 0.5s ease;
     overscroll-behavior: none;
     overflow-x: clip;
